bk_ida/gccida/c3/add_subscript_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_subscript_info/src/dwarf2out.c:9685:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *upper; // [rsp+18h] [rbp-28h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_subscript_info/src/dwarf2out.c:9686:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *lower; // [rsp+20h] [rbp-20h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_subscript_info/src/dwarf2out.c:9697:22: error: expected expression
upper = ( tree_node *)domain[7]; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_subscript_info/src/dwarf2out.c:9697:11: error: use of undeclared identifier 'tree_node'
upper = ( tree_node *)domain[7]; 
          ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_subscript_info/src/obj/dwarf2out.o] Error 1
